///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
// Copyright (c) 2012, Institute of Telematics, University of Luebeck                                                //
// All rights reserved.                                                                                              //
//                                                                                                                   //
// Redistribution and use in source and binary forms, with or without modification, are permitted provided that the  //
// following conditions are met:                                                                                     //
//                                                                                                                   //
// - Redistributions of source code must retain the above copyright notice, this list of conditions and the following//
//   disclaimer.                                                                                                     //
// - Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the       //
//   following disclaimer in the documentation and/or other materials provided with the distribution.                //
// - Neither the name of the University of Luebeck nor the names of its contributors may be used to endorse or       //
//   promote products derived from this software without specific prior written permission.                          //
//                                                                                                                   //
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,//
// INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE     //
// ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,        //
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE//
// GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF   //
// LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY  //
// OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.                               //
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package de.uniluebeck.itm.tr.iwsn.messages;

option java_outer_classname = "Messages";
option java_multiple_files = true;

/////////////////////// REQUESTS /////////////////////// 

message Link {
	required string sourceNodeUrn = 1;
	required string targetNodeUrn = 2;
}

message AreNodesAliveRequest {
	repeated string nodeUrns = 1;
}

message AreNodesConnectedRequest {
	repeated string nodeUrns = 1;
}

message FlashImagesRequest {
	repeated string nodeUrns = 1;
	required bytes image     = 2;
}

message ResetNodesRequest {
	repeated string nodeUrns = 1;
}

message EnableVirtualLinksRequest {
	repeated Link links = 1;
}

message DisableVirtualLinksRequest {
	repeated Link links = 1;
}

message DisableNodesRequest {
	repeated string nodeUrns = 1;
}

message EnableNodesRequest {
	repeated string nodeUrns = 1;
}

message DisablePhysicalLinksRequest {
	repeated Link links = 1;
}

message EnablePhysicalLinksRequest {
	repeated Link links = 1;
}

message SendDownstreamMessagesRequest {
	repeated string targetNodeUrns = 1;
	required bytes  messageBytes   = 2;
}

message SetChannelPipelinesRequest {
	message ChannelHandlerConfiguration {
		message KeyValuePair {
			required string key = 1;
			required string value = 2;
		}
		required string name = 1;
		repeated KeyValuePair configuration = 2;
	}
	repeated string                      nodeUrns                     = 1;
	repeated ChannelHandlerConfiguration channelHandlerConfigurations = 2;
}

message Request {

	enum Type {
		ARE_NODES_ALIVE          = 1;
		ARE_NODES_CONNECTED      = 2;
		DISABLE_NODES            = 3;
		DISABLE_VIRTUAL_LINKS    = 4;
		DISABLE_PHYSICAL_LINKS   = 5;
		ENABLE_NODES             = 6;
		ENABLE_PHYSICAL_LINKS    = 7;
		ENABLE_VIRTUAL_LINKS     = 8;
		FLASH_IMAGES             = 9;
		RESET_NODES              = 10;
		SEND_DOWNSTREAM_MESSAGES = 11;
		SET_CHANNEL_PIPELINES    = 12;
	}

	required int64                            requestId                        = 1;
	required Type                             type                             = 2;

	optional AreNodesAliveRequest             areNodesAliveRequest             = 101;
	optional AreNodesConnectedRequest         areNodesConnectedRequest         = 102;
	optional DisableNodesRequest              disableNodesRequest              = 103;
	optional DisableVirtualLinksRequest       disableVirtualLinksRequest       = 104;
	optional DisablePhysicalLinksRequest      disablePhysicalLinksRequest      = 105;
	optional EnableNodesRequest               enableNodesRequest               = 106;
	optional EnablePhysicalLinksRequest       enablePhysicalLinksRequest       = 107;
	optional EnableVirtualLinksRequest        enableVirtualLinksRequest        = 108;
	optional FlashImagesRequest               flashImagesRequest               = 109;
	optional ResetNodesRequest                resetNodesRequest                = 110;
	optional SendDownstreamMessagesRequest    sendDownstreamMessagesRequest    = 111;
	optional SetChannelPipelinesRequest       setChannelPipelinesRequest       = 112;
}

message SingleNodeProgress {
	required int64  requestId         = 1;
	required string nodeUrn           = 2;
	required uint32 progressInPercent = 3;
}

message SingleNodeResponse {
	required int64  requestId    = 1;
	required string nodeUrn      = 2;
	optional int32  statusCode   = 3;
	optional string errorMessage = 4;
}

/////////////////////// EVENTS /////////////////////// 

message UpstreamMessageEvent {
	required string sourceNodeUrn = 1;
	required uint64 timestamp     = 2;
	required bytes  messageBytes  = 3;
}

message DevicesAttachedEvent {
	repeated string nodeUrns  = 1;
	required uint64 timestamp = 2;
}

message DevicesDetachedEvent {
	repeated string nodeUrns  = 1;
	required uint64 timestamp = 2;
}

message NotificationEvent {
	optional string nodeUrn   = 1;
	required uint64 timestamp = 2;
    required string message   = 3;
}

message Event {

	enum Type {
		UPSTREAM_MESSAGE   = 1;
		DEVICES_ATTACHED   = 2;
        DEVICES_DETACHED   = 3;
		NOTIFICATION       = 4;
	}

	required int64                  eventId                = 1;
	required Type                   type                   = 2;

	optional UpstreamMessageEvent   upstreamMessageEvent   = 101;
	optional DevicesAttachedEvent   devicesAttachedEvent   = 102;
	optional DevicesDetachedEvent   devicesDetachedEvent   = 103;
	optional NotificationEvent      notificationEvent      = 104;
}

message EventAck {
	required int64 eventId = 1;
}

/////////////////////// MESSAGE ENVELOPE /////////////////////// 

message Message {

	enum Type {
		REQUEST   = 1;
		PROGRESS  = 2;
		RESPONSE  = 3;
		EVENT     = 4;
		EVENT_ACK = 5;
	}

	required Type               type     = 1;

	optional Request            request  = 101;
	optional SingleNodeProgress progress = 102;
	optional SingleNodeResponse response = 103;
	optional Event              event    = 104;
	optional EventAck           eventAck = 105;
}
